<resources>
    <string name="app_name">MeuAplicativo</string>
    <string name="nome">Nome</string>
    <string name="hint_nome">Ivan Simplício</string>
    <string name="email">Email</string>
    <string name="hint_email">ivansimplicio@outlook.com</string>
    <string name="senha">Senha</string>
    <string name="cep">C.E.P.</string>
    <string name="msg_erro_email">Email Inválido</string>
    <string name="msg_erro_senha">Senha Inválida</string>
    <string name="msg_sucesso">Usuário %1$s com email %2$s cadastrado com sucesso!</string>
</resources>
